
	* Improved URL handling for ssh/ftp/telnet
		1.  If there is no handler specified, iTerm will launch ssh/ftp/telnet using the 
			default OS X program with default session settings.
		2.  You can also specify a url handler bookmark, and put $$ as its command. Then 
			iTerm will use the default OS X program with customized terminal/display/keyboard 
			settings.
		3.	The old way still works.
		
2009-10-15	fabian

	* Made a simple icon for the sort button in the bookmarks window.
	
2009-10-14	fabian

	* The anti-idle is no longer sent to all tabs when "send input to all tabs" is on.
	* Fixed a newly introduced bug that disable manually change the font size.
	
2009-10-12	fabian

	* If the preference panel loses focus, we now close font menu to avoid confuse.
	
2009-10-08	fabian

	* Fixed a bug that causes the bell icon never shows.
	* Pasting DOS-format strings now no longer have extra new lines.
	
2009-10-07  fabian

    * We now use NSFileHandle to monitor session activity in PTYTask.m. The CPU
      usage is very low even with lots of tabs open.
	* Allow bookmark names to include macros defined by $$ (bug #2142459).
    * Cleaned up code. 
	
2009-10-01	fabian

	* Tweaked close confirmation behavior.
	
2009-09-30	fabian

	* Bookmark sort now an option.
	* Folder name in bookmarks window is now editable.
	* Double-clicking folder names to expand/collapse them.
	* Fixed a bug that stops one to create a bbookmark in an empty folder.
	
2009-09-29	fabian

	* Implemented xterm's window report sequences.
	
2008-09-28	fabian

	* now iTerm uses just one thread to avoid synchronization problem.
	* Removed all the locks/semaphores, coz we no longer need them
	* Fixed a bug of processing wrapping text.
	* Fixed DECCOLM: now screens are correctly cleared.


2008-09-24  fabian

    * Cleaned up for the 0.9.6 release.
    * Fixed a few Panther building problems (haven't tested under Panther).
    
2008-09-23	delx

	* Backed out duplicate change.